# mb-website

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  assets.example.toml  media.example.toml
frontend/: index.html  package.json  vite.config.ts
frontend/public/: browserconfig.xml  site.webmanifest
frontend/public/locales/de/: about.json  galerie.json  gallery.json  kontakt.json  menu.json  mitspielen.json  presse.json  songs.json  ueber.json
frontend/public/locales/en/: about.json  galerie.json  gallery.json  kontakt.json  menu.json  mitspielen.json  presse.json  sonsg.json  ueber.json
frontend/src/: App.tsx  i18next.ts  main.tsx  schemas.ts  store.ts
frontend/src/api/: fetch.ts  schemas.ts
frontend/src/components/: BaseButtonStyle.tsx  Container.tsx  Loader.tsx  Parts.tsx  StyledNavLink.tsx
frontend/src/layout/: Footer.tsx  Header.tsx  Layout.tsx  SlideShow.tsx  responsive.tsx
frontend/src/layout/menu/: DialogMenu.tsx  Menu.tsx  StyledNavLink.tsx
frontend/src/pages/: ErrorPage.tsx
frontend/src/pages/about/: About.tsx
frontend/src/pages/gallery/: Gallery.tsx  GalleryList.tsx
frontend/src/routes/: About.tsx  ErrorPage.tsx  Galerie.tsx
frontend/src/routes/layout/: Header.tsx  Layout.tsx  Menu.tsx
frontend/src/routes/layout/menu/: Menu.tsx  StyledNavLink.tsx
frontend/src/style/: global.css
frontend/src/style/fonts/: fonts.css
src/: assets.rs  handler.rs  main.rs  media.rs
src/handler/: galeries.rs
