[package]
name = "mb-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-web-lab = "0.18.2"
argh = "0.1.9"
env_logger = "0.9.1"
log = "0.4.17"
simple-error = "0.2.3"
serde = { version = "1.0.145", features = ["derive"]}
toml = "0.5.9"